[tool.poetry]
name = "gisaid-cli"
version = "0.1.0"
description = ""
authors = ["Kirill Varchenko <kirill.varchenko@gmail.com>"]
readme = "README.md"
packages = [{include = "gisaid_cli"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.4"
click = "^8.1.7"
aiohttp = "^3.9.3"
aiofiles = "^23.2.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
# Enable the isort rules.
extend-select = ["I"]

[tool.poetry.scripts]
gisaid_cli = 'gisaid_cli.cli:cli'
